get_joystick/err
/Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino: In function 'void switchToLoopMode()':
/Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino:361:3: error: 'displayChannelMappings' was not declared in this scope
   displayChannelMappings();
   ^~~~~~~~~~~~~~~~~~~~~~
/Users/olegbourdo/Documents/Arduino/get_joystick/get_joystick.ino:361:3: note: suggested alternative: 'ChannelMapping'
   displayChannelMappings();
   ^~~~~~~~~~~~~~~~~~~~~~
   ChannelMapping
exit status 1

Compilation error: 'displayChannelMappings' was not declared in this scope
